Restore stringbuilder test